WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86549
Page Scale + Tiled Drawing: Twitter sign in page content disappears after typing into name and enabling password field
https://bugs.webkit.org/show_bug.cgi?id=86549
Summary
Page Scale + Tiled Drawing: Twitter sign in page content disappears after typ...
Beth Dakin
Reported
2012-05-15 17:20:02 PDT
1. Go to twitter.com 2. Use the pinch gesture to zoom in the page 3. Type anything into name field 4. Click into password field Reduction attached. To reproduce with the reduction, just hover and un-hover the document after zooming in via pinch gesture. <
rdar://problem/11415352
>
Attachments
Reduction
(288 bytes, text/html)
2012-05-15 17:24 PDT
,
Beth Dakin
no flags
Details
Patch
(1.62 KB, patch)
2012-05-15 17:24 PDT
,
Beth Dakin
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2012-05-15 17:24:17 PDT
Created
attachment 142105
[details]
Reduction
Beth Dakin
Comment 2
2012-05-15 17:24:38 PDT
Created
attachment 142106
[details]
Patch
Simon Fraser (smfr)
Comment 3
2012-05-15 17:30:07 PDT
Comment on
attachment 142106
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=142106&action=review
> Source/WebCore/ChangeLog:12 > + when there was any kind of scale on the context. Instead, just call
Not strictly any kind of scale; a scale > 1.
Beth Dakin
Comment 4
2012-05-15 17:33:37 PDT
(In reply to
comment #3
)
> (From update of
attachment 142106
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=142106&action=review
> > > Source/WebCore/ChangeLog:12 > > + when there was any kind of scale on the context. Instead, just call > > Not strictly any kind of scale; a scale > 1.
True! Will fix.
Beth Dakin
Comment 5
2012-05-15 17:36:57 PDT
Thanks Oliver!
http://trac.webkit.org/changeset/117196
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug