https://bugs.webkit.org/show_bug.cgi?id=86549 Page Scale + Tiled Drawing: Twitter sign in page content disappears after typing into name and enabling password field -and corresponding- <rdar://problem/11415352>

Reviewed by Oliver Hunt.

The enormous rect we used to use would overflow in CA and do nothing
when there was any scale > 1 on the context. Instead, just call
setNeedsDisplay on each tile.
* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::setNeedsDisplay):



Canonical link: https://commits.webkit.org/104131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117196 268f45cc-cd09-0410-ab3c-d52691b4dbfc